--- a/patrolhound/src/main/webapp/templates/master.xhtml
+++ b/patrolhound/src/main/webapp/templates/master.xhtml
@@ -1,43 +1,45 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:jsf="http://xmlns.jcp.org/jsf">
+		xmlns:ui="http://java.sun.com/jsf/facelets"
+		xmlns:jsf="http://xmlns.jcp.org/jsf" xmlns:h="http://xmlns.jcp.org/jsf/html">
 <head jsf:id="head">
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>Patrolhound</title>
-    <link type="text/css" rel="stylesheet" href="#{request.contextPath}/static/bootstrap.css"/>
-    <script src="#{request.contextPath}/static/bootstrap.js"/>
+	<meta charset="utf-8"/>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<title>Patrolhound</title>
+	<link type="text/css" rel="stylesheet" href="#{request.contextPath}/static/bootstrap.css"/>
+	<script src="#{request.contextPath}/static/bootstrap.js"/>
 </head>
 <body jsf:id="body">
 <nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#{request.contextPath}">Patrolhound</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li class="#{parentId == 'home' ? 'active' : ''}"><a href="#{request.contextPath}">Home</a></li>
-                <li class="#{parentId == 'customerList' ? 'active' : ''}"><a
-                        href="#{request.contextPath}/customerList.xhtml">Company</a></li>
-                <li class="#{parentId == 'customer' ? 'active' : ''}"><a
-                        href="#{request.contextPath}/customer.xhtml">Add Company</a></li>
-            </ul>
-        </div>
-    </div>
+	<div class="container">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+					  aria-expanded="false" aria-controls="navbar">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="#{request.contextPath}">Patrolhound</a>
+		</div>
+		<div id="navbar" class="collapse navbar-collapse">
+			<ul class="nav navbar-nav">
+				<li class="#{parentId == 'home' ? 'active' : ''}"><a href="#{request.contextPath}">Home</a></li>
+				<li class="#{parentId == 'customerList' ? 'active' : ''}">
+					<h:link outcome="pretty:customerList">Company</h:link>
+				</li>
+				<li class="#{parentId == 'customer' ? 'active' : ''}">
+					<h:link outcome="pretty:customer">Add Company</h:link>
+				</li>
+			</ul>
+		</div>
+	</div>
 </nav>
 
 <div class="container">
 
-    <ui:insert name="content"/>
+	<ui:insert name="content"/>
 
 </div>
 
