--- a/patrolhound/src/main/webapp/resources/css/styles.css
+++ b/patrolhound/src/main/webapp/resources/css/styles.css
@@ -2,7 +2,9 @@ body {
 	padding-top: 75px;
 }
 
-.top-buffer { margin-top:20px; }
+.top-buffer {
+	margin-top: 20px;
+}
 
 .progress {
 	position: relative;
